Let quick-search form figure out its own width to prevent wrapping when text-size is set higher than the default or a wider font variation is used. Closes #7

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -168,7 +168,6 @@
     form
       display: block
       float: left
-      width: $sidebar_width + $spacing*2
     a
       color: $text_color
       text-decoration: none
